fix  : stretch immagine

--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,12 @@
 
 .slider .img_box{
     width: 100%;
-
+    text-align: center;
 }
 .slider .img_box > img{
-    width: 100%;
+    max-width: 100%;
+}
+.fa-chevron-right,
+.fa-chevron-left{
+    font-size: 40px;
 }
